--- a/src/scss/modules/_triangle.scss
+++ b/src/scss/modules/_triangle.scss
@@ -20,6 +20,12 @@
         @include transition(all 0.5s ease-in-out);
     }
 
+    @include breakpoint(small only) {
+        &::after{
+            left: 0rem;
+        }
+    }
+
     .row {
         z-index: 1;
         text-align: center;
